Added Grocery List using Firebase, but issues with GroceryList Swift file

--- a/XDLogin/XDLogin/Info.plist
+++ b/XDLogin/XDLogin/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Got Eggplant?</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -18,16 +20,16 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>FacebookAppID</key>
+	<string>fb1:855976225034:ios:97bf3de603a75f81</string>
+	<key>FacebookDisplayName</key>
+	<string>GotEggplant</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>Main</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
-	<key>FacebookAppID</key>
-	<string>fb1:855976225034:ios:97bf3de603a75f81</string>
-	<key>FacebookDisplayName</key>
-	<string>GotEggplant</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
