--- a/mapView/mapView/Info.plist
+++ b/mapView/mapView/Info.plist
@@ -2,8 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Got Eggplant would like to use your current location</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Got Eggplant would like to use your current location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Location manager</string>
+	<string>Got Eggplant would like to use your current location</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
